# rsize

./: Cargo.toml  README.md
.github/workflows/: rust-check.yml
src/: cli.yml  conferror.rs  config.rs  lib.rs  main.rs
