[package]
name = "rsize"
version = "0.1.0"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
image = "0.23.14"
glob = "0.3.0"
rayon = "1.5.0"
threadpool = "1.8.1"
